--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -205,6 +205,8 @@
 
 .main5-body .main5-list {
   width: 24%;
+  background-color: #f8f8f8;
+  padding-bottom: 10px;
 }
 
 .main5-list-wrapper {
@@ -216,17 +218,31 @@
   padding-top: 10px;
   margin-bottom: 10px;
   font-size: 1.2rem;
+  font-weight: 300;
 }
 
 .main5-list-image {
-  height: 220px;
+  height: 200px;
   display: flex;
 }
 
 .main5-list-address {
   padding-bottom: 10px;
   color: gray;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
+  font-weight: 300;
+  display: flex;
+}
+
+.main5-list-address img {
+  width: 14px;
+  height: 17px;
+  margin-right: 5px;
+}
+
+.view-more-btn {
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 /* ///////////////////////////// */
