--- a/views/client/main.html
+++ b/views/client/main.html
@@ -345,7 +345,7 @@
             </div>
             <div class="main5-list-address">
               <img style="vertical-align: bottom;" src="../../public/client/images/01_main/main_middle_pin.png" alt="">
-              부산 해운대구 우동 637-7
+              <span>부산 해운대구 우동 637-7부산 해운대구 우동 637-7</span>
             </div>
           </div>
 
@@ -363,7 +363,7 @@
             </div>
             <div class="main5-list-address">
               <img style="vertical-align: bottom;" src="../../public/client/images/01_main/main_middle_pin.png" alt="">
-              부산 해운대구 우동 637-7
+              <span>부산 해운대구 우동 637-7부산 해운대구 우동 637-7</span>
             </div>
           </div>
 
@@ -381,7 +381,7 @@
             </div>
             <div class="main5-list-address">
               <img style="vertical-align: bottom;" src="../../public/client/images/01_main/main_middle_pin.png" alt="">
-              부산 해운대구 우동 637-7
+              <span>부산 해운대구 우동 637-7부산 해운대구 우동 637-7</span>
             </div>
           </div>
 
@@ -399,11 +399,11 @@
             </div>
             <div class="main5-list-address">
               <img style="vertical-align: bottom;" src="../../public/client/images/01_main/main_middle_pin.png" alt="">
-              부산 해운대구 우동 637-7
+              <span>부산 해운대구 우동 637-7부산 해운대구 우동 637-7</span>
             </div>
           </div>
 
-          <img style="margin-left:10px;" src="../../public/client/images/01_main/main_middle_again.png" alt="">
+          <img class="view-more-btn" src="../../public/client/images/01_main/main_middle_again.png" alt="">
         </div>
       </div>
     </div>
@@ -477,7 +477,7 @@
       </div>
     </div>
 
-
+    <!-- footer -->
     <div class="footer">
       <div class="footer-wrapper">
         <div class="footer-logo">
@@ -502,14 +502,35 @@
           </div>
         </div>
         <div class="footer-extra">
-          <img src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
+          <img id="footer_list_btn" src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
           <div class="footer-extra-service">
             <span style="cursor:pointer;">서비스 이용약관 보기</span>
             <br>
             <span style="cursor:pointer;">개인정보 처리 약관 보기</span>
           </div>
+          <div id="footer_list" class="footer-list">
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+          </div>
         </div>
+        <script type="text/javascript">
+          $("#footer_list_btn").click(()=>{
+            $("#footer_list").toggle();
+          })
+        </script>
       </div>
     </div>
+
+    <!--  -->
   </body>
 </html>
