--- a/views/client/sign.html
+++ b/views/client/sign.html
@@ -244,46 +244,60 @@
         </div>
 
 
+        <!-- footer -->
+        <div class="footer">
+          <div class="footer-wrapper">
+            <div class="footer-logo">
+              <img src="../../public/client/images/01_main/main_botton_logo.png" class="footer-logo-img">
+            </div>
+            <div class="footer-content">
+              <div class="footer-content-title">
+                &nbsp;호텔 프렌차이즈 사업문의
+              </div>
+              <div class="footer-content-contact">
+                1877-1318 &nbsp;
+                <span> <img src="../../public/client/images/01_main/main_icon_blog.png" class=""> </span>
+                <span> <img src="../../public/client/images/01_main/main_icon_face.png" class=""> </span>
+                <span> <img src="../../public/client/images/01_main/main_icon_insta.png" class=""> </span>
+                <span> <img src="../../public/client/images/01_main/main_icon_map.png" class=""> </span>
+              </div>
 
+              <div class="footer-content-company-info">
+                대표자: 이승훈 사업장 소재지: 부산광역시 해운대구 우동 1410 트럼프월드마린 D동 상가 2F 208, 209호 사업자 등록번호: 823-86-00673<br>
+                개인정보관리책임자: 이승훈 팩스번호: 051-921-0051 프렌차이즈 사업 문의: 1877-1318 평일 10:00~19:00 (토/일/공휴일휴무)<br>
+                이메일: lsr@wnthotels.com official web: www.wnh.co.kr
+              </div>
+            </div>
+            <div class="footer-extra">
+              <img id="footer_list_btn" src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
+              <div class="footer-extra-service">
+                <span style="cursor:pointer;">서비스 이용약관 보기</span>
+                <br>
+                <span style="cursor:pointer;">개인정보 처리 약관 보기</span>
+              </div>
+              <div id="footer_list" class="footer-list">
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+              </div>
+            </div>
+            <script type="text/javascript">
+              $("#footer_list_btn").click(()=>{
+                $("#footer_list").toggle();
+              })
+            </script>
+          </div>
+        </div>
 
-
-
-
-				<!-- footer -->
-				<div class="footer">
-					<div class="footer-wrapper">
-						<div class="footer-logo">
-							<img src="../../public/client/images/01_main/main_botton_logo.png" class="footer-logo-img">
-						</div>
-						<div class="footer-content">
-							<div class="footer-content-title">
-								&nbsp;호텔 프렌차이즈 사업문의
-							</div>
-							<div class="footer-content-contact">
-								1877-1318 &nbsp;
-								<span> <img src="../../public/client/images/01_main/main_icon_blog.png" class=""> </span>
-								<span> <img src="../../public/client/images/01_main/main_icon_face.png" class=""> </span>
-								<span> <img src="../../public/client/images/01_main/main_icon_insta.png" class=""> </span>
-								<span> <img src="../../public/client/images/01_main/main_icon_map.png" class=""> </span>
-							</div>
-
-							<div class="footer-content-company-info">
-								대표자: 이승훈 사업장 소재지: 부산광역시 해운대구 우동 1410 트럼프월드마린 D동 상가 2F 208, 209호 사업자 등록번호: 823-86-00673<br>
-								개인정보관리책임자: 이승훈 팩스번호: 051-921-0051 프렌차이즈 사업 문의: 1877-1318 평일 10:00~19:00 (토/일/공휴일휴무)<br>
-								이메일: lsr@wnthotels.com official web: www.wnh.co.kr
-							</div>
-						</div>
-						<div class="footer-extra">
-							<img src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
-							<div class="footer-extra-service">
-								<span style="cursor:pointer;">서비스 이용약관 보기</span>
-								<br>
-								<span style="cursor:pointer;">개인정보 처리 약관 보기</span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!--  -->
+        <!--  -->
 	</body>
 </html>
