--- a/views/client/list.html
+++ b/views/client/list.html
@@ -238,6 +238,11 @@
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
             <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list-price-container">
+              <span class="list-fake-price">10,000</span>
+              <span class="list-real-price">49,500</span>
+            </div>
+
           </div>
           <div class="list2-right-list-title">
             <div class="title">
@@ -272,6 +277,10 @@
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
             <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list-price-container">
+              <span class="list-fake-price">10,000</span>
+              <span class="list-real-price">49,500</span>
+            </div>
           </div>
           <div class="list2-right-list-title">
             <div class="title">
@@ -305,6 +314,10 @@
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
             <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list-price-container">
+              <span class="list-fake-price">10,000</span>
+              <span class="list-real-price">49,500</span>
+            </div>
           </div>
           <div class="list2-right-list-title">
             <div class="title">
@@ -338,6 +351,10 @@
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
             <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list-price-container">
+              <span class="list-fake-price">10,000</span>
+              <span class="list-real-price">49,500</span>
+            </div>
           </div>
           <div class="list2-right-list-title">
             <div class="title">
@@ -371,6 +388,10 @@
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
             <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list-price-container">
+              <span class="list-fake-price">10,000</span>
+              <span class="list-real-price">49,500</span>
+            </div>
           </div>
           <div class="list2-right-list-title">
             <div class="title">
@@ -404,6 +425,10 @@
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
             <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list-price-container">
+              <span class="list-fake-price">10,000</span>
+              <span class="list-real-price">49,500</span>
+            </div>
           </div>
           <div class="list2-right-list-title">
             <div class="title">
@@ -438,6 +463,7 @@
     </div>
 
 
+    <!-- footer -->
     <div class="footer">
       <div class="footer-wrapper">
         <div class="footer-logo">
@@ -462,14 +488,35 @@
           </div>
         </div>
         <div class="footer-extra">
-          <img src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
+          <img id="footer_list_btn" src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
           <div class="footer-extra-service">
             <span style="cursor:pointer;">서비스 이용약관 보기</span>
             <br>
             <span style="cursor:pointer;">개인정보 처리 약관 보기</span>
           </div>
+          <div id="footer_list" class="footer-list">
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+            <span>광안 하운드: 000-000-0000</span>
+            <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+          </div>
         </div>
+        <script type="text/javascript">
+          $("#footer_list_btn").click(()=>{
+            $("#footer_list").toggle();
+          })
+        </script>
       </div>
     </div>
+
+    <!--  -->
   </body>
 </html>
