--- a/views/client/pay.html
+++ b/views/client/pay.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../public/client/vendor/slick/slick.css">
     <script src="../../public/client/vendor/slick/slick.min.js"></script>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    
+
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
@@ -260,35 +260,38 @@
                             <div class="pay_policy">
                                    <div class="policy_wrapper">
                                         <div class="policy_head">취소/환불 규정 보기</div>
-                                        <div class="policy_button" onclick="ListShow('policy',1,3)">전문보기 <i class="fas fa-chevron-down fa-xs"></i></div>
-                                    </div>
+                                        <div class="policy_button">전문보기 <i class="fas fa-chevron-down fa-xs"></i></div>
+
                                         <p class="policy_text" id="policy[1]">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         </p>
+                                    </div>
                                 </div>
                                 <div class="pay_policy">
                                    <div class="policy_wrapper">
                                         <div class="policy_head">개인정보 수집 / 이용 약관 보기</div>
-                                        <div class="policy_button" onclick="ListShow('policy',2,3)">전문보기 <i class="fas fa-chevron-down fa-xs"></i></div>
-                                    </div>
+                                        <div class="policy_button">전문보기 <i class="fas fa-chevron-down fa-xs"></i></div>
+
                                         <p class="policy_text" id="policy[2]">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         </p>
+                                    </div>
                                 </div>
                                 <div class="pay_policy">
                                    <div class="policy_wrapper">
                                         <div class="policy_head">개인정보 제3자 제공 약관</div>
-                                        <div class="policy_button" onclick="ListShow('policy',3,3)">전문보기 <i class="fas fa-chevron-down fa-xs"></i></div>
-                                    </div>
+                                        <div class="policy_button">전문보기 <i class="fas fa-chevron-down fa-xs"></i></div>
+
                                         <p class="policy_text" id="policy[3]">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellendus sed alias dolores voluptatum eligendi officia nam amet recusandae expedita explicabo maiores quo veritatis voluptates saepe, enim, suscipit, laudantium consectetur!
                                         </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -377,13 +380,32 @@
 							</div>
 						</div>
 						<div class="footer-extra">
-							<img src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
+							<img id="footer_list_btn" src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
 							<div class="footer-extra-service">
 								<span style="cursor:pointer;">서비스 이용약관 보기</span>
 								<br>
 								<span style="cursor:pointer;">개인정보 처리 약관 보기</span>
 							</div>
+              <div id="footer_list" class="footer-list">
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+                <span>광안 하운드: 000-000-0000</span>
+                <span>나포 하운드 프리미엄 호텔: 000-000-0000</span>
+              </div>
 						</div>
+            <script type="text/javascript">
+              $("#footer_list_btn").click(()=>{
+                $("#footer_list").toggle();
+              })
+            </script>
 					</div>
 				</div>
 
@@ -403,23 +425,35 @@
 			      }
 			    };
 
-        
-        function ListShow(text, num, forlen) { 
-            for (i=1; i<=forlen; i++) { 
-                div_id = text+"["+i+"]"; 
-                obj = document.getElementById(div_id); 
-                if (i==num)	{divcatch(obj,1);} 
-                if (i!=num)	{divcatch(obj,2);} 
-                } 
-                } 
+        $(".policy_button").click( (e) => {
 
-        function divcatch(obj, o_type) { 
-            if(o_type == 1) { 
-            obj.style.display = "block"; 
-            } else { 
-            obj.style.display = "none"; 
-            } 
-            } ;d
+          if($(e.target).siblings('.policy_text').is(":visible")){
+              $(e.target).find('i').addClass('fa-chevron-down').removeClass('fa-chevron-up');
+
+          }
+          else {
+              $(e.target).find('i').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+          }
+          $(e.target).siblings('.policy_text').toggle();
+        })
+
+
+        function ListShow(text, num, forlen) {
+            for (i=1; i<=forlen; i++) {
+                div_id = text+"["+i+"]";
+                obj = document.getElementById(div_id);
+                if (i==num)	{divcatch(obj,1);}
+                if (i!=num)	{divcatch(obj,2);}
+                }
+                }
+
+        function divcatch(obj, o_type) {
+            if(o_type == 1) {
+            obj.style.display = "block";
+            } else {
+            obj.style.display = "none";
+            }
+          }
 
         </script>
 </html>
